added a little bit of style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JIRA-GitHub Auditor</title>
+  <style>
+    body {
+      background-color: #1f1f1f;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 20px;
+      padding: 20px;
+    }
+
+    h1, h2, h3 {
+      color: #61dafb;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
+    ol {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
 
