--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       background-color: #1f1f1f;
       color: #ffffff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Courier New', Tahoma, Geneva, Verdana, sans-serif;
       margin: 20px;
       padding: 20px;
     }
