adding circuit border

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       font-family: 'Courier New', Tahoma, Geneva, Verdana, sans-serif;
       margin: 20px;
       padding: 20px;
+      border: 2px solid #61dafb; /* Circuit border color */
+      border-radius: 10px; /* Adjust border radius for rounded corners */
+      overflow: hidden; /* Hide overflow content */
     }
 
     h1, h2, h3 {
