--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
     <li>To understand more on <a href="https://support.atlassian.com/jira-cloud-administration/docs/what-are-issue-types/">issue-types.</a></li> 
     <li>Issue type name: Approvals</li>
     <li>Description: Approvals represents the GitHub Pull Request approval. This issue type will be for Project Managers/Approvers who are managing the GitHub Project outside of GitHub. An external approval taken from JIRA.</li>
-    <h5>Fields:</h5>
+    <h5>a. Fields:</h5>
         <li><strong>Description fields:</strong> These fields describe the work that needs to be done. They display prominently in most views.</li>
         <li><strong>Summary [Required]:</strong> This is a mandatory field that provides a concise and clear overview of the issue. Ideally, it should be 255 characters or less for optimal readability. Think of it as a headline that captures the essence of the problem or task.</li>
         <li><strong>Description:</strong> This optional field allows for a more detailed explanation of the issue. Describe the symptoms, steps to reproduce, expected behavior, and any other relevant information that helps understand the problem and how to resolve it.</li>
-    <h5>Context Fields:</h5><p>These fields provide context to the work, and help group, filter, and report on similar issues.</p>
+    <h5>b. Context Fields:</h5><p>These fields provide context to the work, and help group, filter, and report on similar issues.</p>
         <li><strong>Assignee:</strong> This field indicates the person responsible for working on the issue. Selecting an assignee improves accountability and helps track progress.</li>
 </body>
 </html>
+
