checking code box

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
           <li>Project: Specify the project name.</li>
           <li>Issue type: Approvals</li>
           <li>Choose a field to set: Assignee, Description</li>
-          <li>Summary* [required]: <script> "Pull Request#{{webhookData.number}} for {{webhookData.repository.name}}" </script></li>
+          <li>Summary* [required]: <code>Pull Request#{{webhookData.number}} for {{webhookData.repository.name}}</code>
+          </li>
 </body>
 </html>
 
