--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
           <li>Project: Specify the project name.</li>
           <li>Issue type: Approvals</li>
           <li>Choose a field to set: Assignee, Description</li>
-          <li>Summary* [required]: <code>Pull Request#{{webhookData.number}} for {{webhookData.repository.name}}</code>
-          </li>
+          <li>Summary* [required]: <pre><code>Pull Request#{{webhookData.number}} for {{webhookData.repository.name}}</code></pre></li>
 </body>
 </html>
 
