--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
           <li>Project: Specify the project name.</li>
           <li>Issue type: Approvals</li>
           <li>Choose a field to set: Assignee, Description</li>
-          <li>Summary* [required]: <code id="codeSnippet">Pull Request#{{webhookData.number}} for {{webhookData.repository.name}}</code></li>
+          <li>Summary* [required]: 
+            <div class="code-box" id="codeBox"><code id="codeSnippet">Pull Request#{{webhookData.number}} for {{webhookData.repository.name}}</code><button class="copy-button" onclick="copyCode()">Copy Code</button></div></li>
 </body>
 </html>
 
