--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     .code-box {
             position: relative;
             display: inline-block;
-            border: 1px solid #ddd;
+            border: 1px solid #dddddd00;
             padding: 10px;
-            background-color: #f9f9f9;
+            background-color: #f9f9f917;
             border-radius: 5px;
         }
 
@@ -47,7 +47,7 @@
             right: 5px;
             cursor: pointer;
             padding: 5px 10px;
-            background-color: #4CAF50;
+            background-color: #4caf4f09;
             color: #fff;
             border: none;
             border-radius: 3px;
