--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <li>The above expression will create an issue in JIRA with a title that includes information about a specific GitHub pull request. The placeholders like {{webhookData.number}} and {{webhookData.repository.name}} will be dynamically replaced with actual data from the webhook payload when the automation rule is executed.</li>
         <li>Description: </li>
         <div class="code-box" id="codeBox">
-          <code id="codeSnippet">
+          <code id="codeSnippet1">
             {{webhookData.pull_request.user.login}} has created Pull Request
             #{{webhookData.number}} for {{webhookData.repository.name}}
             Link to Pull request {{webhookData.pull_request.html_url}}
@@ -145,7 +145,7 @@
       <script>
           function copyCode() {
               /* Get the text content of the code snippet */
-              var codeText = document.getElementById("codeSnippet").innerText;
+              var codeText = document.getElementById("codeSnippet1").innerText;
 
               /* Create a temporary textarea to hold the code text */
               var tempTextArea = document.createElement("textarea");
