syntax error corrected

--- a/index.html
+++ b/index.html
@@ -115,33 +115,6 @@
             {{webhookData.pull_request.body}}
           </code>
           <button class="copy-button" onclick="CodeCopy.copyCode('codeSnippet2')">Copy Code</button>
-
-      <!-- <script>
-          function copyCode() {
-              /* Get the text content of the code snippet */
-              var codeText = document.getElementById("codeSnippet1").innerText;
-
-              /* Create a temporary textarea to hold the code text */
-              var tempTextArea = document.createElement("textarea");
-              tempTextArea.value = codeText;
-
-              /* Append the textarea to the body */
-              document.body.appendChild(tempTextArea);
-
-              /* Select the text in the textarea */
-              tempTextArea.select();
-              tempTextArea.setSelectionRange(0, 99999);
-
-              /* Copy the text to the clipboard */
-              document.execCommand("copy");
-
-              /* Remove the temporary textarea */
-              document.body.removeChild(tempTextArea);
-
-              /* Provide some visual feedback */
-              alert("Code copied to clipboard!");
-          }
-      </script> -->
-
+        </div>
 </body>
 </html>
