--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <li>Summary* [required]:
             <div class="code-box1" id="codeBox1">
               <code id="codeSnippet1">Pull Request#{{webhookData.number}} for {{webhookData.repository.name}}</code>
-              <button class="copy-button" onclick="CodeCopy.copyCode('codeSnippet1')">Copy Code</button>
+              <button class="copy-button1" onclick="CodeCopy.copyCode('codeSnippet1')">Copy Code</button>
           </div>
         </li>
         <li>The above expression will create an issue in JIRA with a title that includes information about a specific GitHub pull request. The placeholders like {{webhookData.number}} and {{webhookData.repository.name}} will be dynamically replaced with actual data from the webhook payload when the automation rule is executed.</li>
@@ -114,7 +114,7 @@
             Link to Pull request {{webhookData.pull_request.html_url}}
             {{webhookData.pull_request.body}}
           </code>
-          <button class="copy-button" onclick="CodeCopy.copyCode('codeSnippet2')">Copy Code</button>
+          <button class="copy-button2" onclick="CodeCopy.copyCode('codeSnippet2')">Copy Code</button>
         </div>
 </body>
 </html>
